# archon-gcp

./: .env.example  .gitignore  README.md  SUBMISSION.md  VIDEO-SCRIPT.md  build_notebook.py  kernel-metadata.json  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  demo-video.yml
archon/: __init__.py  agent.py  cli.py  documents.py  extract.py  ledger.py  models.py  narrator.py  pipeline.py  store.py  validation.py
docs/: narration.txt  screencast_transcript.txt
scripts/: captions.txt  demo_sequential.py  make_screencast.py
tests/: adk_fakes.py  conftest.py
tests/e2e/: test_deterministic_cli.py  test_pipeline_offline.py
tests/integration/: test_agent_tools.py  test_pipeline_build.py
tests/unit/: test_extract.py  test_ledger.py  test_narrator.py  test_store.py  test_validation.py
